# TestAPEN

./: .gitignore  CLAUDE.md  CMakeLists.txt  ClaudeSucksWhenLoadingFromReboot.md  claude-session-context.txt  claude-user-notes.txt  partitions.csv  sdkconfig  sdkconfig.defaults
EPaperTest/: EPaperTest.ino
EPartial/: EPartial.ino  README.md
UiNode/: UiNode.ino
UiNode/src/bcDebugNet/: bcDebugNet.cpp  bcDebugNet.h
UiNode/src/bcOta/: bcOta.cpp  bcOta.h
UiNode/src/conf/: credentials.h
agent/: coding-prompt.md  feature-list.json
android/: .gitignore  build.gradle  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/cascade/testap2/: AutopilotBleManager.kt  CascadeApplication.kt  MagCalibrationActivity.kt  MainActivity.kt  ParametersActivity.kt
android/app/src/main/res/drawable/: circle_indicator.xml  rudder_background.xml
android/app/src/main/res/layout/: activity_mag_calibration.xml  activity_main.xml  activity_parameters.xml  param_row.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
components/as5600/: CMakeLists.txt  as5600.c
components/as5600/include/: as5600.h
components/autopilot_common/: CMakeLists.txt  autopilot_common.c
components/autopilot_common/include/: autopilot_common.h
components/ble_manager/: CMakeLists.txt  ble_manager.c
components/ble_manager/include/: ble_manager.h
components/cmd_console/: CMakeLists.txt  cmd_console.c
components/cmd_console/include/: cmd_console.h
components/epaper/: CMakeLists.txt  epaper.c
components/epaper/include/: epaper.h
components/espnow_protocol/: CMakeLists.txt  espnow_protocol.c
components/espnow_protocol/include/: espnow_protocol.h
components/gnss_driver/: CMakeLists.txt  gnss_driver.c
components/gnss_driver/include/: gnss_driver.h
components/icm20948/: CMakeLists.txt  icm20948.c  madgwick.c
components/icm20948/include/: icm20948.h  madgwick.h
components/network_manager/: CMakeLists.txt  network_manager.c
components/network_manager/include/: network_manager.h
components/param_store/: CMakeLists.txt  param_store.c
components/param_store/include/: param_store.h
components/ssd1306/: CMakeLists.txt  ssd1306.c
components/ssd1306/include/: ssd1306.h
components/state_machine/: CMakeLists.txt  state_machine.c
components/state_machine/include/: state_machine.h
docs/: Code.Compare.To.FSD.v0.0.1.md  FSD-Differences.v0.0.1.md  FSD-GENERATION-INSTRUCTIONS.md  IMU_Calibration_Report.md  SuperClaude-Server-Build.md  TestAP2.FSD.v1.0.0.md  TestAPEN-TestPlan.md  TestAPEN.FSD.v1.0.0.md  TestAPEN.FSD.v1.1.0.md  claude-progress.txt
main/: CMakeLists.txt  Kconfig.projbuild  epaper_test.c  main.c  master_interface.h  master_node.c  rudder_node.c  ui_node.c
tests/: TEST_SUITE.md
tests/scripts/: acceptance_tests.sh  ble_tests.sh  button_tests.sh  comm_tests.sh  display_tests.sh  error_tests.sh  motor_tests.sh  quick_validation.sh  run_all_tests.sh  test_common.sh
